Alteração footer e imagens

--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensagem"></textarea>
               <div class="validation"></div>
             </div>
             <div class="text-center"><button type="submit">Enviar</button></div>
@@ -1038,29 +1038,31 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="img/logo.png" alt="TheEvenet">
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+            <p>
+              O projeto Varas LMS Rods é desenvolver varas de pescar com componentes de altissíma qualidade, oferecendo segurança e confiabilidade para atender os amantes da pesca esportiva. Projetada para atender todas as necessidades em cada pescaria, seja ela de rio, mar ou de pesqueiro. Varas LMS Rods, para quem procura o melhor custo benefício.
+            </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
+            <ul>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Início</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Sobre Nós</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Serviços</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Termos de Uso</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Política de Privacidade</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+<!--             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
+            </ul> -->
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
@@ -1069,8 +1071,8 @@
               A108 Adam Street <br>
               New York, NY 535022<br>
               United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Telefone:</strong> +1 5589 55488 55<br>
+              <strong>E-mail:</strong> info@example.com<br>
             </p>
 
             <div class="social-links">
@@ -1089,7 +1091,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+        Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos Direitos Reservados | Desenvolvido por <a href="http://emergecreative.com.br/" target="_blank"><img src="http://emergecreative.com.br/images/logo_emerge.png" width="80pg"></a>
       </div>
       <div class="credits">
         <!--
@@ -1098,7 +1100,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- #footer -->
